--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "randombytes": "^2.1.0",
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
