--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
     "randombytes": "^2.1.0",
     "uid-safe": "^2.1.5"
   },
