--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "start node ../api/server.js & react-scripts start",
+    "start": "start node ../api/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
